touching up data directory, adding postgis README

--- a/data/data.ipynb
+++ b/data/data.ipynb
@@ -99,7 +99,7 @@
    ],
    "source": [
     "# Plot the data\n",
-    "df_building.plot()\n",
+    "df_building.plot() # df_building was defined in the previous cell, just not explicitly\n",
     "plt.show()\n"
    ]
   },
@@ -135,6 +135,8 @@
     "db = \"overture\"\n",
     "user = \"mapper\"\n",
     "password = \"password\"\n",
+    "    # Security is not our priority for development \n",
+    "    # Clearly this needs to be adapted for production deployments\n",
     "\n",
     "engine = create_engine(f\"postgresql://{user}:{password}@{host}:{port}/{db}\")\n",
     "inspector = inspect(engine)\n"
@@ -318,7 +320,10 @@
     "        db_name = df_name.replace(\"df_\", \"omf_\")\n",
     "        df.to_postgis(db_name, engine, if_exists=\"replace\")\n",
     "    except Exception as e:\n",
-    "        print(f\"Error creating table for {df_name}: {e}\")\n"
+    "        print(f\"Error creating table for {df_name}: {e}\")\n",
+    "# This is a relatively simple approach.\n",
+    "# We should do some more preprocessing on datatypes.\n",
+    "# But this is a good starting point for our prototype."
    ]
   }
  ],
